tests/compile_tests/forgot_to_add_derive.stderr
error: cannot find attribute `From` in this scope
 --> $DIR/forgot_to_add_derive.rs:1:3
  |
1 | #[From(B)]
  |   ^^^^
