tests/compile_tests/forgot_to_add_derive.rs
#[From(B)]
struct A;

struct B;

#[allow(dead_code)]
fn main() {}
